--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A React project",
   "main": "index.js",
   "scripts": {
-    "lint": "standard"
+    "lint": "standard",
+    "build": "webpack"
   },
   "author": "Brian Holt <btholt@gmail.com>",
   "license": "MIT",
