--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "npm run build -- --watch"
   },
   "author": "Brian Holt <btholt@gmail.com>",
   "license": "MIT",
