--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A React project",
   "main": "index.js",
   "scripts": {
-    "lint": "standard",
+    "lint": "eslint js/**/*.js webpack.config.js",
     "build": "webpack",
     "watch": "npm run build -- --watch"
   },
@@ -12,13 +12,16 @@
   "license": "MIT",
   "dependencies": {
     "axios": "0.9.1",
+    "css-loader": "^0.26.1",
     "express": "4.13.4",
     "lodash": "4.6.1",
+    "node": "^0.0.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "style-loader": "^0.13.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
